--- a/ext/tokenkit/Cargo.toml
+++ b/ext/tokenkit/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 magnus = "0.7"
 unicode-segmentation = "1.10"
 regex = "1.10"
+linkify = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
