--- a/ext/tokenkit/Cargo.toml
+++ b/ext/tokenkit/Cargo.toml
@@ -13,6 +13,7 @@ regex = "1.10"
 linkify = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "1.0"
 
 [profile.release]
 lto = true
