--- a/ext/tokenkit/Cargo.toml
+++ b/ext/tokenkit/Cargo.toml
@@ -14,6 +14,7 @@ linkify = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+once_cell = "1.19"
 
 [profile.release]
 lto = true
